--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/public_html/js/app.js": "/public_html/js/app.js",
+    "/_html/css/app.css": "/_html/css/app.css"
 }
